Remove Docker and environment configuration files, including Dockerfile, docker-compose.yml, and .env. Update .gitignore to reflect new project structure and dependencies. Refactor Makefile for simplified commands and enhance README with updated features and usage instructions for the Next.js backend service.

--- a/env.example
+++ b/env.example
@@ -1,22 +1,14 @@
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=mock_backend
+DB_USER=postgres
+DB_PASSWORD=password
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=24h
+
 # Server Configuration
 PORT=3000
-HOST=0.0.0.0
-
-# Environment
-NODE_ENV=production
-
-# API Configuration
-API_VERSION=v1
-API_PREFIX=/api
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000
-CORS_CREDENTIALS=true
-
-# Rate Limiting
-RATE_LIMIT_WINDOW=15m
-RATE_LIMIT_MAX=100
-
-# Logging
-LOG_LEVEL=info
-LOG_FORMAT=json
+NODE_ENV=development
