--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,135 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Dependencies
+/node_modules/
 /.pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# testing
-/coverage
+# Package manager files
+bun.lockb
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+.lock-wscript
+.bun
 
-# next.js
+# Next.js
 /.next/
 /out/
+/build/
+/dist/
 
-# production
-/build
+# Next.js specific
+.next/
+next-env.d.ts
+next.config.js
+next.config.ts
+next.config.mjs
+next.config.json
 
-# misc
-.DS_Store
-*.pem
+# PWA and Service Workers
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Testing
+/coverage/
+*.lcov
+.nyc_output/
+.jest/
+test-results/
+playwright-report/
+playwright/.cache/
 
-# local env files
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env*.local
 
-# vercel
+# Vercel
 .vercel
 
-**/*.trace
-**/*.zip
-**/*.tar.gz
-**/*.tgz
-**/*.log
-package-lock.json
-**/*.bun
+# TypeScript
+*.tsbuildinfo
+
+# Development and logs
+*.log
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+lerna-debug.log*
+
+# Cache directories
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
+
+# Security and certificates
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+*.pwd
+
+# Database and local storage
+*.db
+*.sqlite
+*.sqlite3
+*.mdb
+*.accdb
+local-storage/
+session-storage/
+
+# Monitoring and analytics
+*.log.gz
+*.log.1
+*.log.2
+*.log.3
+*.log.4
+*.log.5
+*.log.6
+*.log.7
+*.log.8
+*.log.9
+*.log.10
