--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
   "name": "mock-backend-mobile",
-  "version": "1.0.0",
-  "description": "Mock backend API built with Elysia and Bun",
-  "main": "src/index.ts",
+  "version": "0.1.0",
+  "private": true,
+  "packageManager": "bun@1.2.20",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir ./dist --target bun",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
-    "type-check": "tsc --noEmit"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "install:bun": "bun install",
+    "clean": "rm -rf node_modules .next bun.lockb"
   },
-  "keywords": ["elysia", "bun", "api", "typescript", "mock-backend"],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "@elysiajs/cors": "^1.3.3",
-    "@elysiajs/swagger": "^1.3.1",
-    "elysia": "latest"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.4.7",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
-  },
-  "engines": {
-    "bun": ">=1.0.0"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.11",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.7",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
