--- a/package.json
+++ b/package.json
@@ -8,31 +8,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "install:bun": "bun install",
-    "clean": "rm -rf node_modules .next bun.lockb"
+    "clean": "rm -rf node_modules .next bun.lockb .bun"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.11",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.4.7",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   }
 }
