--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "packageManager": "bun@1.2.20",
   "scripts": {
     "dev": "next dev",
+    "dev:api": "bun run src/server.ts",
     "build": "next build",
     "start": "next start",
+    "start:api": "bun run src/server.ts",
     "lint": "next lint",
     "clean": "rm -rf node_modules .next bun.lockb .bun"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.3",
+    "@elysiajs/jwt": "^1.3.2",
+    "@elysiajs/swagger": "^1.3.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "elysia": "^1.3.11",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.7",
     "react": "19.1.1",
