--- a/.gitignore
+++ b/.gitignore
@@ -1,84 +1,125 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
-/node_modules/
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# Package manager files
-bun.lockb
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-.lock-wscript
-.bun
-
-# Next.js
-/.next/
-/out/
-/build/
-/dist/
-
-# Next.js specific
-.next/
-next-env.d.ts
-next.config.js
-next.config.ts
-next.config.mjs
-next.config.json
-
-# PWA and Service Workers
-**/public/sw.js
-**/public/workbox-*.js
-**/public/worker-*.js
-**/public/sw.js.map
-**/public/workbox-*.js.map
-**/public/worker-*.js.map
-
-# Testing
-/coverage/
-*.lcov
-.nyc_output/
-.jest/
-test-results/
-playwright-report/
-playwright/.cache/
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env*.local
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-
-# Development and logs
-*.log
-*.log.*
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-lerna-debug.log*
+pnpm-debug.log*
+bun.lockb
 
-# Cache directories
-.cache/
-.parcel-cache/
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
 .eslintcache
+
+# Optional stylelint cache
 .stylelintcache
 
-# OS generated files
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Bun
+bun.lockb
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -86,50 +127,19 @@ lerna-debug.log*
 .Trashes
 ehthumbs.db
 Thumbs.db
-Desktop.ini
 
-# IDE and Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-*.sublime-project
-*.sublime-workspace
+# Logs
+logs
+*.log
 
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
-*.orig
+# Temporary folders
+tmp/
+temp/
 
-# Security and certificates
-*.pem
-*.key
-*.crt
-*.p12
-*.pfx
-*.pwd
+# Build outputs
+dist/
+build/
+out/
 
-# Database and local storage
-*.db
-*.sqlite
-*.sqlite3
-*.mdb
-*.accdb
-local-storage/
-session-storage/
-
-# Monitoring and analytics
-*.log.gz
-*.log.1
-*.log.2
-*.log.3
-*.log.4
-*.log.5
-*.log.6
-*.log.7
-*.log.8
-*.log.9
-*.log.10
+# Elysia specific
+.elysia/
