--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
-  "name": "mock-backend-mobile",
-  "version": "0.1.0",
-  "private": true,
-  "packageManager": "bun@1.2.20",
+  "name": "app",
+  "version": "1.0.50",
   "scripts": {
-    "dev": "next dev",
-    "dev:api": "bun run src/server.ts",
-    "build": "next build",
-    "start": "next start",
-    "start:api": "bun run src/server.ts",
-    "lint": "next lint",
-    "clean": "rm -rf node_modules .next bun.lockb .bun"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "@elysiajs/cors": "^1.3.3",
-    "@elysiajs/jwt": "^1.3.2",
-    "@elysiajs/swagger": "^1.3.1",
-    "@types/jsonwebtoken": "^9.0.10",
-    "elysia": "^1.3.11",
-    "jsonwebtoken": "^9.0.2",
-    "next": "15.4.7",
-    "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "elysia": "latest"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "15.4.7",
-    "tailwindcss": "^4.1.12",
-    "typescript": "^5.9.2"
-  }
+    "bun-types": "latest"
+  },
+  "module": "src/index.js"
 }
