--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "bun run --prettier src/**/*.ts"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.3.1",
     "elysia": "latest"
   },
   "devDependencies": {
