--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
-    "elysia": "latest"
+    "elysia": "latest",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "bun-types": "latest"
   },
   "module": "src/index.js"
