--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "elysia": "latest",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
