--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "bun run --prettier src/**/*.ts"
   },
   "dependencies": {
+    "@elysiajs/bearer": "^1.3.0",
+    "@elysiajs/cors": "^1.3.3",
+    "@elysiajs/jwt": "^1.3.2",
     "@elysiajs/swagger": "^1.3.1",
     "@types/jsonwebtoken": "^9.0.10",
     "elysia": "latest",
