--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
