--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/jwt": "^1.3.2",
     "@elysiajs/swagger": "^1.3.1",
+    "@jsonquerylang/jsonquery": "^5.0.4",
     "@sentry/bun": "^10.10.0",
     "@types/jsonwebtoken": "^9.0.10",
     "elysia": "latest",
