feat: Introduce file upload API with Minio integration and update good received note data and routes.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ PORT=4000
 NODE_ENV=development
 
 JWT_SECRET=TEST_MOCK_SECRET
+
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+MINIO_ENDPOINT=http://dev.blueledgers.com:3990
+MINIO_ACCESS_KEY=carmen
+MINIO_SECRET_KEY=9pYSsEvTj3ZhwzBClRuAj3yJ
+MINIO_BUCKET_NAME=carmen
