--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.6",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
     "zod": "^4.1.1"
